force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>SAP Invoices related to orders or not</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>I-{0000000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>