force-app/main/default/objects/Invoice__c/fields/BillingEmail__c.field-meta.xml
<CustomField>
    <fullName>BillingEmail__c</fullName>
    <description>Email that is associated to the SAP Account</description>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>