force-app/main/default/objects/Invoice__c/fields/DownloadedDateTime__c.field-meta.xml
<CustomField>
    <fullName>DownloadedDateTime__c</fullName>
    <description>Field to save the timestamp when the user clicks on the link from SAP</description>
    <label>Downloaded Date/Time</label>
    <type>DateTime</type>
</CustomField>