force-app/main/default/objects/Invoice__c/fields/DownloadLink__c.field-meta.xml
<CustomField>
    <fullName>DownloadLink__c</fullName>
    <description>URL to have access to the Invoice PDF</description>
    <label>Download Link</label>
    <type>Url</type>
</CustomField>