force-app/main/default/objects/Invoice__c/fields/DueInDays__c.field-meta.xml
<CustomField>
    <fullName>DueInDays__c</fullName>
    <description>Formula that calculates the time missing for the due date</description>
    <formula>IF (DueDate__c &gt;= TODAY(), DueDate__c - TODAY(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due in x Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>