force-app/main/default/objects/Invoice__c/fields/DunningLetterDownloadLink__c.field-meta.xml
<CustomField>
    <fullName>DunningLetterDownloadLink__c</fullName>
    <description>URL to have access to the latest Dunning Letter PDF, updated by SAP</description>
    <label>Download Dunning Letter</label>
    <type>Url</type>
</CustomField>