force-app/main/default/objects/Invoice__c/fields/DunningLetterIssueDate__c.field-meta.xml
<CustomField>
    <fullName>DunningLetterIssueDate__c</fullName>
    <description>Last Dunning Letter Issue Date, updated by SAP</description>
    <label>Dunning Letter Issue Date</label>
    <type>Date</type>
</CustomField>