force-app/main/default/objects/Invoice__c/fields/DunningLevel__c.field-meta.xml
<CustomField>
    <fullName>DunningLevel__c</fullName>
    <description>&quot;Age Factor&quot; regarding the Invoice that is due, updated by SAP</description>
    <label>Dunning Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>