force-app/main/default/objects/Invoice__c/fields/InvoiceSAPNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSAPNumber__c</fullName>
    <description>Number of the Invoice in SAP</description>
    <label>Invoice SAP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>