force-app/main/default/objects/Invoice__c/fields/IsDownloaded__c.field-meta.xml
<CustomField>
    <fullName>IsDownloaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifier that reflects if the invoice was downloaded or not, updated by SAP</description>
    <label>Downloaded</label>
    <type>Checkbox</type>
</CustomField>