force-app/main/default/objects/Invoice__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <description>Issue Date, updated via SAP</description>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>