force-app/main/default/objects/Invoice__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <description>Payment Date, updated by SAP</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>