force-app/main/default/objects/Invoice__c/fields/SendRemainder__c.field-meta.xml
<CustomField>
    <fullName>SendRemainder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical field used to send the email and chatter notification about the due date of the invoice.</description>
    <label>Send Remainder</label>
    <type>Checkbox</type>
</CustomField>