force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the Invoice, updated by SAP</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New invoice</fullName>
            </value>
            <value>
                <fullName>Invoice in progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>