force-app/main/default/objects/Invoice__c/fields/TrafficLight__c.field-meta.xml
<CustomField>
    <fullName>TrafficLight__c</fullName>
    <description>Visual tool created in Salesforce to identify if the due date is close</description>
    <formula>IF( DueDate__c - TODAY() &gt; 2 ,IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_260))+&apos;resource/GREEN&apos;, &apos;GREEN&apos; ,20, 20),
IF((DueDate__c - TODAY() &gt; 0 &amp;&amp; TODAY() - DueDate__c &lt;= 2), IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_260)) + &apos;resource/YELLOW&apos;, &apos;YELLOW&apos; ,20, 20) ,
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_260)) + &apos;resource/RED&apos;, &apos;RED&apos; , 20, 20)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green: Invoice not due
Yellow: Invoice shortly before due date
Red: Overdue invoice</inlineHelpText>
    <label>Due Date Indicator</label>
    <type>Text</type>
</CustomField>