force-app/main/default/objects/Invoice__c/fields/TypeOInvoice__c.field-meta.xml
<CustomField>
    <fullName>TypeOInvoice__c</fullName>
    <description>Type of Invoice, updated by SAP</description>
    <label>Type of Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZD</fullName>
                <label>Invoice debit</label>
            </value>
            <value>
                <fullName>ZCD</fullName>
                <label>Cancel invoice debit</label>
            </value>
            <value>
                <fullName>ZC</fullName>
                <label>Return invoice</label>
            </value>
            <value>
                <fullName>ZMC</fullName>
                <label>Credit memo invoice</label>
            </value>
            <value>
                <fullName>ZMD</fullName>
                <label>Debit memo invoice - ZMD</label>
            </value>
            <value>
                <fullName>ZMD1</fullName>
                <label>Debit memo invoice - ZMD1</label>
            </value>
            <value>
                <fullName>ZMD2</fullName>
                <label>Debit memo invoice - ZMD2</label>
            </value>
            <value>
                <fullName>ZS12</fullName>
                <label>Bonus invoice - ZS12</label>
            </value>
            <value>
                <fullName>ZS92</fullName>
                <label>Bonus invoice - ZS92</label>
            </value>
            <value>
                <fullName>ZS13</fullName>
                <label>Commission invoice - ZS13</label>
            </value>
            <value>
                <fullName>ZS93</fullName>
                <label>Commission invoice - ZS93</label>
            </value>
            <value>
                <fullName>ZFAZ</fullName>
                <label>Prepayment invoice</label>
            </value>
            <value>
                <fullName>FAS</fullName>
                <label>Cancel prepayment invoice</label>
            </value>
            <value>
                <fullName>ZD96</fullName>
                <label>Debit note CO2</label>
            </value>
            <value>
                <fullName>DH</fullName>
                <label>Advance payment</label>
            </value>
            <value>
                <fullName>DA</fullName>
                <label>Late Interests - DA</label>
            </value>
            <value>
                <fullName>DF</fullName>
                <label>Late Interests - DF</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>