force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TrafficLight__c</columns>
    <columns>DueInDays__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>ACMECustomerManager</role>
        <role>AT_Sales_Representative</role>
        <role>BG_Sales_Representative</role>
    </sharedTo>
</ListView>