force-app/main/default/objects/Invoice__c/listViews/AllInvoices.listView-meta.xml
<ListView>
    <fullName>AllInvoices</fullName>
    <columns>NAME</columns>
    <columns>InvoiceSAPNumber__c</columns>
    <columns>Status__c</columns>
    <columns>TypeOInvoice__c</columns>
    <columns>Amount__c</columns>
    <columns>IssueDate__c</columns>
    <columns>DueDate__c</columns>
    <columns>TrafficLight__c</columns>
    <columns>PaymentDate__c</columns>
    <columns>DownloadLink__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>