force-app/main/default/objects/Invoice__c/listViews/InvoicesNotDownloaded.listView-meta.xml
<ListView>
    <fullName>InvoicesNotDownloaded</fullName>
    <columns>NAME</columns>
    <columns>InvoiceSAPNumber__c</columns>
    <columns>Status__c</columns>
    <columns>TypeOInvoice__c</columns>
    <columns>Amount__c</columns>
    <columns>IssueDate__c</columns>
    <columns>DueDate__c</columns>
    <columns>TrafficLight__c</columns>
    <columns>DownloadLink__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsDownloaded__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Invoices Not Downloaded</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>