force-app/main/default/objects/Invoice__c/listViews/Last30DaysInvoices.listView-meta.xml
<ListView>
    <fullName>Last30DaysInvoices</fullName>
    <columns>NAME</columns>
    <columns>InvoiceSAPNumber__c</columns>
    <columns>Status__c</columns>
    <columns>TypeOInvoice__c</columns>
    <columns>Amount__c</columns>
    <columns>IssueDate__c</columns>
    <columns>DueDate__c</columns>
    <columns>TrafficLight__c</columns>
    <columns>PaymentDate__c</columns>
    <columns>DownloadLink__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IssueDate__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Last 30 days Invoices</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>