force-app/main/default/objects/Invoice__c/listViews/Open_Invoices_Homepage.listView-meta.xml
<ListView>
    <fullName>Open_Invoices_Homepage</fullName>
    <columns>NAME</columns>
    <columns>InvoiceSAPNumber__c</columns>
    <columns>Amount__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>IssueDate__c</columns>
    <columns>DueDate__c</columns>
    <columns>TrafficLight__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PaymentDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>Open Invoices</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>